<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/iv_about_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:tint="?attr/colorAccent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name_full"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/tv_about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/about_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_about_source"
            style="@style/VSIMaterialButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/about_source" />

    </LinearLayout>

</ScrollView>
